examples/external-eks/config/istio/gateway-internal.yaml
# -- Make sure to use same Namespace for Gateway, Ingress & var.istio_ingress_extra_configs["namespace"], default namespace is set to `istio-system`.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway-internal
  namespace: istio-system
spec:
  selector:
    istio: ingress-internal
  servers:
  - hosts:
    - "*.test.clouddrove.com"
    - "test.clouddrove.com"
    port:
      number: 80
      name: http
      protocol: HTTP
